--- a/app.css
+++ b/app.css
@@ -144,7 +144,6 @@ h1 {
 
 #dark_mode {
   margin-left: 0;
-  color: #c09bc4;
 }
 .dark,
 .dark * {
@@ -319,4 +318,21 @@ footer{
 
 .hide {
   display: none;
+}
+
+@media screen and (max-width: 800px) {
+
+  #price {
+    display: none;
+  }  
+  #lang {
+    margin: auto;
+    margin-bottom: 30px;
+  }
+
+  #logos-sociaux {
+    margin-top: -80px;
+    margin-right: 900px;
+  }
+
 }
