--- a/app.css
+++ b/app.css
@@ -322,8 +322,23 @@ footer{
 
 @media screen and (max-width: 980px) {
 
+  #content {
+    font-size: 30px;
+  }
+
+  #lang {
+    font-size: 30px;
+  }
+
+  #title {
+    font-size: 65px;
+  }
+  #init {
+    font-size: 25px;
+  }
   #price {
     display: none;
+    position: center;
   }  
   #lang {
     margin: auto;
@@ -333,6 +348,18 @@ footer{
   #logos-sociaux {
     margin-top: -80px;
     margin-right: 900px;
+  }
+
+  #footer {
+    font-size: 20px;
+  }
+
+  .container {
+    font-size: 30px;
+  }
+
+  .accordion, .accordion-item, .content {
+    font-size: 50px;
   }
 
 }
