--- a/app.css
+++ b/app.css
@@ -378,11 +378,20 @@ footer{
     margin-top: -3px;
   }
   #mail{
-    margin-top: 1px;
+    margin-top: 2px;
   }
-
 }
 
 .container {
   text-align: center;
+}
+
+#reseaux {
+  margin-top: 10px;
+}
+#twitter{
+  margin-top: -8px;
+}
+#telegram {
+  margin-top: -5.5px;
 }
