--- a/app.css
+++ b/app.css
@@ -14,6 +14,12 @@ h1 {
   flex-direction: column;
 }
 
+#title {
+  font-family: sans-serif;
+  font-family:Ubuntu;
+  font-size: 65;
+}
+
 #dialog {
   display: flex;
   flex-direction: column;
