--- a/baking-finance.css
+++ b/baking-finance.css
@@ -127,7 +127,7 @@ a.wallet:hover {
 
 @media screen and (max-width:991px) {
     #baking-finance-logo {
-        background-image: url(./logo.png)
+        background-image: url(./images/logo.png)
     }
 }
 
