--- a/baking-finance.css
+++ b/baking-finance.css
@@ -149,7 +149,7 @@ a.wallet:hover {
 
 @media screen and (max-width:991px) {
     #baking-finance-logo {
-        background-image: url(./images/logo.png)
+        background-image: url(./images/logo_baking.png)
     }
 }
 
