--- a/baking-finance.css
+++ b/baking-finance.css
@@ -144,7 +144,8 @@ a.wallet:hover {
     width: 50px;
     height: 50px;
     background-repeat: no-repeat;
-    background-size: cover
+    background-size: cover;
+    background-image: url(./images/logo-light.png);
 }
 
 @media screen and (max-width:991px) {
